--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "next": "latest",
     "next-sitemap": "4.2.3",
     "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "latest",
+    "react-dom": "latest",
     "nodemailer": "^6.9.3",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
