--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "next": "latest",
-    "next-sitemap": "4.2.3",
-    "postcss": "^8.4.31",
-    "react": "latest",
-    "react-dom": "latest",
-    "nodemailer": "^6.9.3",
-    "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+  "@supabase/supabase-js": "^2.45.0",
+  "autoprefixer": "^10.4.14",
+  "next": "latest",
+  "next-sitemap": "4.2.3",
+  "postcss": "^8.4.31",
+  "react": "latest",
+  "react-dom": "latest",
+  "nodemailer": "^6.9.3",
+  "tailwindcss": "^3.4.0",
+  "tailwindcss-animate": "^1.0.7"
   }
 }
