--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=https://srapdowprlnmwyhjlymv.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_EUkO7TZ5sw_ussKmYnofEQ_1o-plqq4
+NEXT_PUBLIC_SUPABASE_URL=https://yceveeuuiqkvuugreugw.supabase.co
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_EUkO7TZ5sw_ussKmYnofEQ_1o-plqq4
