--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "postcss": "^8.4.31",
   "react": "latest",
   "react-dom": "latest",
+  "react-icons": "^4.12.0",
   "nodemailer": "^6.9.3",
   "tailwindcss": "^3.4.0",
   "tailwindcss-animate": "^1.0.7"
